solved horizontal scroll issue by wrapping the stats table in a container...need to update home name logic as it gets stuck to the bottom of the viewport

--- a/src/GameInfo/style.css
+++ b/src/GameInfo/style.css
@@ -29,11 +29,6 @@ body {
 	margin-bottom: 0px;
 }
 
-/*Need this to avoid null*/
-.visitor-name {
-
-}
-
 .visitor-name-fixed {
 	position: fixed;
 	top: 100px; /*100, height of the game-score table above this one*/
@@ -42,9 +37,19 @@ body {
 	z-index: 10;
 }
 
-.visitor-stats-container {
-	/*position: relative;*/
-	/*clear: left;*/
+/*These containers are necessary for scrolling within them and not the entire document*/
+#visitor-stats-container, #home-stats-container {
+	overflow: auto;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#visitor-stats-container::-webkit-scrollbar, #home-stats-container::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+#visitor-stats-container, #home-stats-container {
+    -ms-overflow-style: none;
 }
 
 .visitor-stats-container-fixed { /*Don't need this to be fixed*/
@@ -118,7 +123,7 @@ body {
 .freeze-head-and-col-fixed thead tr:first-of-type th {
 	position: -webkit-sticky;
 	position: sticky;
-	top: 147px; /*100 + 47 = 147, height of the two containers above this one*/
+	top: 0px; /*100 + 47 = 147, height of the two containers above this one*/
 	background-color: cyan;
 }
 
